loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: not found: value isOverOrange
while(isOverOrange==false) {
      ^